<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <Button
        android:id="@+id/addButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:alpha="0.70"
        android:fontFamily="@font/cinzel"
        android:includeFontPadding="true"
        android:onClick="clickAddProject"
        android:singleLine="false"
        android:soundEffectsEnabled="true"
        android:text="@string/add_project"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/viewButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.70"
        android:fontFamily="@font/cinzel"
        android:includeFontPadding="true"
        android:onClick="clickViewProject"
        android:singleLine="false"
        android:soundEffectsEnabled="true"
        android:text="@string/view_projects"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/testButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.70"
        android:fontFamily="@font/cinzel"
        android:includeFontPadding="true"
        android:onClick="clickTestProject"
        android:singleLine="false"
        android:soundEffectsEnabled="true"
        android:text="@string/system_test"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>